syntax = "proto3";

package NAlice.NProtoVins;

import "alice/megamind/protos/scenarios/response.proto";
import "google/protobuf/struct.proto";

message TNlgRenderData {
    repeated google.protobuf.Struct BassBlocks = 1 [json_name = "bass_blocks"];
}

message TBassResponse {
    message TForm {
        message TSlot {
            google.protobuf.Struct Data = 1 [json_name = "data"];
            string Type = 2 [json_name = "type"];
            string Name = 3 [json_name = "name"];
        }

        repeated TSlot Slots = 1 [json_name = "slots"];
        string Name = 2 [json_name = "name"];
    }

    message TBlock {
        google.protobuf.Struct Data = 1 [json_name = "data"];
        string Type = 2 [json_name = "type"];
    }

    repeated TBlock Blocks = 1 [json_name = "blocks"];
    TForm Form = 2 [json_name = "form"];
}

message TVinsRunResponse {
    NAlice.NScenarios.TScenarioRunResponse ScenarioRunResponse = 1 [json_name = "scenario_run_response"];
    TNlgRenderData NlgRenderData = 2 [json_name = "nlg_render_data"];
    TBassResponse BassResponse = 3 [json_name = "bass_response"];
}

message TVinsApplyResponse {
    NAlice.NScenarios.TScenarioApplyResponse ScenarioApplyResponse = 1 [json_name = "scenario_apply_response"];
    TNlgRenderData NlgRenderData = 2 [json_name = "nlg_render_data"];
    TBassResponse BassResponse = 3 [json_name = "bass_response"];
}
